# dutch-frequency-analyzer

./: .fdignore  .gitignore  README.md  dutch_words.txt  pyproject.toml
assets/: back.html  front.html  style.css
dutch_frequency_analyzer/: analyzer.py  deck_generator.py  merger.py  reverso.py  sentence_finder.py  shared.py
